Starting the project

--- a/TipCalculator/TipCalculator/TipCalculator/MainPage.xaml
+++ b/TipCalculator/TipCalculator/TipCalculator/MainPage.xaml
@@ -11,6 +11,8 @@
         <Label Text="Hello World!" 
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
+        <Button Text="Accept"
+                VerticalOptions="EndAndExpand"/>
     </StackLayout>
 
 </ContentPage>
